# work

./: README.md  build.gradle  gradle.properties  import-summary.txt  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/libs/: ldmaplib-release.aar
app/src/androidTest/java/com/example/mytakeout/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/quchangkeji/mytakeout/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: map.txt  map2.txt
app/src/main/cpp/: MP4Encoder.cpp  MP4EncoderHelper.cpp  _ContourFinder.cpp  _ContourFinder.h  _hough.cpp  _hough.h  dewarpFishEyeImg.cpp  dewarpFishEyeImg.h  map_cut.cpp  map_cut.h  native-lib-video.cpp  native-lib-video2.cpp  native-lib-video3.cpp  native-lib.cpp  remap.cpp  remap.h
app/src/main/java/com/example/mytakeout/: DensityUtil.java  JniUtils.java  MyBitmap.java  MyBitmapFactory.java  TouchImage.java
app/src/main/java/com/example/mytakeout/Imageloader/: ImageLoader.java  ImageResizer.java
app/src/main/java/com/example/mytakeout/adapter/: HomeRvAdapter.java  MeAdapter.java  MyViewpagerAdapter.java  RVItemClickLisenter.java  VPAdapter.java
app/src/main/java/com/example/mytakeout/anim/: CustomAnimal.java
app/src/main/java/com/example/mytakeout/base/: AppConstant.java  AppManager.java  BaseActivity.java  BaseApplication.java  BaseFragment.java  BaseViewHolder.java  HeaderAndFooterWrapper.java  TitleConst.java
app/src/main/java/com/example/mytakeout/modle/dao/: DBHelper.java
app/src/main/java/com/example/mytakeout/modle/net/bean/: EventScanResult.java  HomeBean.java  NowWeatherBean.java  WeatherBean.java  WeatherBodyBean.java
app/src/main/java/com/example/mytakeout/net/: Api.java  ApiManager.java  HttpRequest.java  HttpResponse.java  RetrofitUtils.java
app/src/main/java/com/example/mytakeout/presenter/: BasePresenterlmpl.java
app/src/main/java/com/example/mytakeout/presenter/fragment/: HomeFragmentPresenter.java  HomePresenterImpl.java
app/src/main/java/com/example/mytakeout/recyclerview/: CommonAdapter.java  MultiItemTypeAdapter.java
app/src/main/java/com/example/mytakeout/recyclerview/base/: ItemViewDelegate.java  ItemViewDelegateManager.java  ViewHolder.java
app/src/main/java/com/example/mytakeout/recyclerview/utils/: WrapperUtils.java
app/src/main/java/com/example/mytakeout/recyclerview/wrapper/: EmptyWrapper.java  HeaderAndFooterWrapper.java  LoadMoreWrapper.java
app/src/main/java/com/example/mytakeout/ui/activity/: CustPagerTransformer.java  DepthPageTransformer.java  LeakCanaryActivity.java  MainActivity.java  MyPageTransformer.java  RetrofitActivity.java  SplashActivity.java  ToastActivity.java  VideoActivity.java  ViewPagerCarouselActivity.java  ViewPagerGralleryActivity.java  ViewPagerInstuctorActivity.java  ViewPagerTestActivity.java  ViewsActivity.java  WiFiActivty.java
app/src/main/java/com/example/mytakeout/ui/fragment/: CommonFragment.java  HomeFragment.java  HomeFragmentView.java  MeFragment.java  MoreFragment.java  OrderFragment.java
app/src/main/java/com/example/mytakeout/ui/video/: LdDecoder.java  LdDecoderLisenter.java  LdSurfaceView.java  VideoPlayViewGL.java
app/src/main/java/com/example/mytakeout/ui/views/: AvoidXfermodeView.java  BitmapShaderView.java  ChangeView.java  CommonDialogManager.java  CustomDialog.java  MiNiProgressBar.java  MyImageView.java  MyToast.java  PieView.java  PortDuffXfermode.java  RectView.java  RotateImageView.java  RotateTableView.java  ScaleImageView.java  ShadowLayerView.java  TestView.java  WButton.java
app/src/main/java/com/example/mytakeout/utils/: DecodeCallback.java  FileUtils.java  ImmersionBarUtils.java  LDGLSurfaceView.java  LogUtils.java  MP4BufferLisenter.java  MP4VideoExtractor.java  UIUtils.java
app/src/main/java/com/example/mytakeout/wifi/: WifiBroadcastReceiver.java  WifiUtils.java
app/src/main/java/com/example/quchangkeji/mytakeout/: details
app/src/main/java/com/example/quchangkeji/mytakeout/Imageloader/: ImageLoader.java  ImageResizer.java
app/src/main/java/com/example/quchangkeji/mytakeout/adapter/: HomeRvAdapter.java
app/src/main/java/com/example/quchangkeji/mytakeout/base/: AppConstant.java  AppManager.java  BaseActivity.java  BaseApplication.java  BaseFragment.java  SimpleFragment.java
app/src/main/java/com/example/quchangkeji/mytakeout/net/: Api.java  HttpRequest.java  HttpResponse.java  RetrofitUtils.java
app/src/main/java/com/example/quchangkeji/mytakeout/presenter/: BasePresenterlmpl.java
app/src/main/java/com/example/quchangkeji/mytakeout/utils/: LogUtils.java  RectView.java
app/src/main/java/com/ldvideo/: JniUtils.java
app/src/main/res/drawable/: home_selector.xml  me_selector.xml  more_selector.xml  order_selector.xml  progressbar_mini.xml  shape_both_white_white.xml  splash_wrap_image.xml  toast_shape.xml
app/src/main/res/layout/: activity_base.xml  activity_glvideo.xml  activity_leak_canary.xml  activity_main.xml  activity_retrofit.xml  activity_splash.xml  activity_test_viewpager.xml  activity_test_viewpager_instructor.xml  activity_toast.xml  activity_video.xml  activity_viewpager_carousel.xml  activity_viewpager_gallery.xml  activity_views.xml  activity_wifi.xml  down_file_dialog.xml  fragment_common.xml  fragment_home.xml  fragment_home_item.xml  fragment_me.xml  fragment_more.xml  fragment_order.xml  item_banner.xml  item_me_fragment.xml  title_app.xml  toast_view.xml  view_rotate_table_layout.xml  viewpager_activity.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-v19/: styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/test/java/com/example/quchangkeji/mytakeout/: ExampleUnitTest.java
app相关/: mytakeout.jks
basetestdemo/: build.gradle
net/: build.gradle
(+93 files in other folders)
